[package]
name = "editor"
version = "0.1.0"
authors = ["Odd-Harald Lillestø Myhren <knarkzel@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crisp = { path = "../crisp" }
eframe = "0.16"
syntect = { version = "4.6", default-features = false, features = ["default-fancy"]}

[profile.release]
opt-level = 2
