[package]
name = "editor"
version = "0.1.0"
authors = ["Odd-Harald Lillestø Myhren <knarkzel@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.16"
crisp = { path = "../crisp" }

[target.'cfg(target_os = "linux")'.dependencies]
syntect = "4.6"

[target.'cfg(not(target_os = "linux"))'.dependencies]
syntect = { version = "4.6", default-features = false, features = ["default-fancy"]}

[profile.release]
lto = true
opt-level = 's'
